apps/ollama/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    app: ollama
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
