apps/ollama/open-webui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: ollama
  labels:
    app: open-webui
spec:
  selector:
    app: open-webui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
