apps/ollama/ollama-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama
  namespace: ollama
  labels:
    app: ollama
spec:
  host: ollama.apps.ocp.new.lab.danielsson.us.com
  to:
    kind: Service
    name: ollama
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
