apps/ollama/open-webui-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open-webui
  namespace: ollama
  labels:
    app: open-webui
spec:
  host: open-webui.apps.ocp.new.lab.danielsson.us.com
  to:
    kind: Service
    name: open-webui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
